--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SERVER_PORT = 3000
-DB_PASSWORD = "root"
-DB_USERNAME =  root
 DB_HOST = localhost
+DB_PASSWORD = 'root'
+DB_USERNAME =  root
 DB_NAME = db_movie
