--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "watch": "node --watch app.js"
   },
   "dependencies": {
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "multer": "^2.0.1",
     "mysql2": "^3.14.1"
   }
 }
